--- a/index.css
+++ b/index.css
@@ -5,11 +5,19 @@ body {
     margin: 0 auto;
   }
   
-  header {
+  header, footer {
     width: 100%;
     height: 55px;
     background: rgb(58, 150, 241);
     padding-top: 25px;
+  }
+
+  footer {
+    color: #fff;
+    height: 45px;
+    padding-left: 5%;
+    margin-top: 127px;
+    width: 95%;
   }
   
   h1 {
@@ -17,9 +25,9 @@ body {
     color: #fff;
     text-align: center;
   }
-  
+
   section {
-    width: 90%;
+    width: 60%;
     height: 400px;
     margin-top: 40px;
   }
