--- a/index2.css
+++ b/index2.css
@@ -5,11 +5,19 @@ body {
     margin: 0 auto;
   }
   
-  header {
+  header, footer {
     width: 100%;
     height: 55px;
     background: rgb(58, 150, 241);
     padding-top: 25px;
+  }
+
+  footer {
+    color: #fff;
+    height: 45px;
+    padding-left: 5%;
+    margin-top: 127px;
+    width: 95%;
   }
   
   h1 {
@@ -19,7 +27,7 @@ body {
   }
   
   section {
-    width: 90%;
+    width: 60%;
     height: 400px;
     margin-top: 40px;
   }
@@ -56,7 +64,7 @@ body {
   }
 
 
-  input[type="text"] {
+  input {
     border: 1;
     font-size: 14px;
     width: 100%;
